Revision history for {{$dist->name}}

{{$NEXT}}
  - don't use lib in main script

0.11      2013-04-23 16:53:33 America/New_York
  - use MakeMaker instead of ModuleBuild

0.10      2013-04-16 11:14:23 America/New_York
  - don't clobber user with route variables

0.09      2013-04-12 09:49:34 America/New_York
  - audit log for create,change,remove users,groups and resources
  - fix t/selfauth.t to not use config in ~/etc

0.08      2013-02-13 12:50:03 America/New_York
  - ensure the last line of the file has a new line in modificatons
  - ensure if the last line of the file doesn't have a new line adds still work

0.07      2012-12-27 18:05:54 America/New_York
  - return json if format is JSON.
  - return yml if format is YAML.
  - bug fix: /authz/user/username/action/ now returns 403 or 200 instead of always returning 404
  - feature: also allow /grant/user/username/action/
  - self auth against $c->authz instead of using Clustericious::Plugin::PlugAuth
  - Better tests for case insensitive usernames

0.06      2012-12-14 11:41:26 America/New_York
  - Avoid creating extra resources when using /authz/user/... routes
  - Created PlugAuth::Plugin::Test

0.05      2012-12-11 13:56:53 America/New_York
  - handle comments correctly for 'GET /grant'

0.04      2012-12-07 15:41:56 America/New_York
  - fixed /group/:group/#user route for users with @
  - added welcome role (PlugAuth::Role::Welcome)
  - wrote PlugAuth::Guide::Plugin (was a stub)

0.03      2012-12-03 10:43:56 America/New_York
  - wrote PlugAuth::Guide::Client (was a stub)
  - added grant route (GET /grant)

0.02      2012-11-29 15:13:48 America/New_York
  - Added specification tests for Plugins (Test::PlugAuth::Plugin::*)
  - use autodata to support JSON, YAML, whatever, instead of just JSON
  - use temp storage by default if no files are specified in the config
    warn on this sort of usage, as modifications will be lost.
  - Added revoke route (DELETE /grant/...)
