@@ -9,4 +9,4 @@ eval q{
 delete $ENV{HARNESS_ACTIVE};
 $ENV{MOJO_HOME} = "$FindBin::Bin";
 $ENV{CLUSTERICIOUS_CONF_DIR} = $ENV{PLUGAUTH_CONF_DIR} // "$FindBin::Bin/etc";
-$ENV{LOG_LEVEL} = "ERROR";
+$ENV{LOG_LEVEL} ||= "ERROR";
