@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 16;
+use Test::More tests => 15;
 
 use_ok 'PlugAuth';
 use_ok 'PlugAuth::Routes';
@@ -19,5 +19,4 @@ use_ok 'Test::PlugAuth::Plugin::Auth';
 use_ok 'Test::PlugAuth::Plugin::Authz';
 use_ok 'Test::PlugAuth::Plugin::Refresh';
 
-use_ok 'PlugAuth::SelfAuth';
-use_ok 'PlugAuth::SelfAuth::PlugAuth';
+use_ok 'Clustericious::Plugin::SelfPlugAuth';
