@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - simplify the self auth plugin
   - don't use lib in main script
 
 0.11      2013-04-23 16:53:33 America/New_York
